--- a/contacto.html
+++ b/contacto.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./main.css">
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
     <meta charset="utf-8">
-    <title>Garlana - Contacto</title>
+    <title>Paella Marbella - Contacto</title>
     <link rel="shortcut icon" href="./img/logo.png">
 </head>
 <body>
@@ -19,7 +19,6 @@
             <i class="fa fa-times" onclick="hideMenu()"></i>
             <ul>
                 <li class="nav-item"><a href="./index.html">inicio</a></li>
-                <li class="nav-item"><a href="https://tienda.garlana.com">a domicilio</a></li>
                 <li class="nav-item"><a href="./contacto.html">contacto</a></li>
             </ul>
         </div>
@@ -40,17 +39,17 @@
     <div class="left">
         <div class="left-info">
             <i class="fa fa-home"></i>
-            <h2 class="left-h2">Carrer del Capità Arenas, 27</h2>
-            <p>08034 Barcelona.</p>
+            <h2 class="left-h2">Dirección, Numero</h2>
+            <p>CP, Marbella.</p>
         </div>
         <div class="left-info">
             <i class="fa fa-phone"></i>
-            <h2>932 03 97 68 / 932 52 49 25</h2>
+            <h2>652 126 921</h2>
             <p>De Lunes a Sabado de 11 Am a 10 Pm</p>
         </div>
         <div class="left-info">
             <i class="fa fa-envelope"></i>
-            <h2>info@garlana.com</h2>
+            <h2>info@paellamarbella.com</h2>
             <p>Envíanos un E-mail</p>
         </div>
     </div>
@@ -68,8 +67,8 @@
 
 <section class="about">
     <div class="logos">
-        <a href="https://www.instagram.com/garlana_/?hl=en" target="_blank"><i class="fa fa-instagram"></i></a>
-        <a href="https://www.facebook.com/Garlana?ref=hl" target="_blank"><i class="fa fa-facebook"></i></a>
+        <a href="https://www.instagram.com/paellamarbella/?hl=en" target="_blank"><i class="fa fa-instagram"></i></a>
+        <a href="https://www.facebook.com/PaellaMarbellaCatering" target="_blank"><i class="fa fa-facebook"></i></a>
         <a href="#" target="_blank"><i class="fa fa-twitter"></i></a>
         <a href="#" target="_blank"><i class="fa fa-google"></i></a>
     </div>
