--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="./main.css">
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
     <meta charset="utf-8">
-    <title>Garlana</title>
+    <title>Paella Marbella</title>
     <link rel="shortcut icon" href="./img/logo.png">
 </head>
+
 <body>
 <section class="header">
     <nav>
@@ -19,7 +20,6 @@
             <i class="fa fa-times" onclick="hideMenu()"></i>
             <ul>
                 <li class="nav-item"><a href="./index.html">inicio</a></li>
-                <li class="nav-item"><a href="https://tienda.garlana.com">a domicilio</a></li>
                 <li class="nav-item"><a href="./contacto.html">contacto</a></li>
             </ul>
         </div>
@@ -34,17 +34,27 @@
     </div>
 </section>
 
+<!-- SOBRE NOSOTROS -->
+<section>
+    <div class="ab-us">
+        <h1>Sobre nosotros</h1>
+        <div class="ab-us-comment">
+            <p><cite>"Nos encanta nuestro trabajo y por eso nos gusta hacer cada evento de forma personalizada y cuidando cada detalle, elaborando cada Menú según los gustos y necesidades de cada cliente, con presupuestos a medida"</cite></p>
+        </div>
+    </div>
+</section>
+
 <!-- CALL TO ACTION -->
 <section class="calls">
     <div class="call-to">
     <div class="ep-text">
-        <h1>Amamos lo que hacemos</h1>
+        <h1>Especializados en Paellas y Arroces</h1>
     </div>
     <div class="ep">
         <div class="ep-col">
             <div class="col-text">
                 <h1>Pedido a Domicilio</h1>
-                <p>Disfruta de nuestro arroces a través de nuestra <span class="tienda-online"><a href="https://tienda.garlana.com">Tienda Online</a> </span>. ¡Del envío nos ocupamos nosotros!</p>
+                <p>Disfruta de nuestro arroces con Cocinero a Domicilio! <span class="tienda-online"><a href="contacto.html">Contacta</a> </span> con nosotros. ¡No te quedes con las ganas!</p>
             </div>
         </div>
         <div class="ep-col">
@@ -56,12 +66,25 @@
         <div class="ep-col">
             <div class="col-text">
                 <h1>Arroces que enamoran</h1>
-                <p>Nuestro producto estrella son los Arroces, tradición en Garlana desde 1979.</p>
+                <p>Nuestro producto estrella son los Arroces, pero también estamos especializados en platos de cuchara, que apetecen más en invierno!</p>
             </div>
         </div>
     </div>
     </div>
 </section>
+
+<!-- Nuestro servicio -->
+
+<section>
+    <div class="ab-us">
+        <h1>¿Qué ofrecemos?</h1>
+        <div class="ab-us-comment">
+            <p><cite>"Nos encanta nuestro trabajo y por eso nos gusta hacer cada evento de forma personalizada y cuidando cada detalle, elaborando cada Menú según los gustos y necesidades de cada cliente, con presupuestos a medida"</cite></p>
+        </div>
+    </div>
+</section>
+
+<!-- Mapa -->
 
 <section class="map">
 <div class="map-container">
@@ -69,54 +92,16 @@
         <h1>¿Dónde estamos?</h1>
     </div>
     <div class="maps">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2993.216008144799!2d2.1233669150654766!3d41.391115103727685!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a49867f9a2dfb1%3A0x75f6df3d99cb9a14!2sGarlana!5e0!3m2!1sen!2ses!4v1645655432847!5m2!1sen!2ses" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d40256.96244788668!2d-4.902783721673111!3d36.50896966007597!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd72d809904dabdf%3A0xe6c9db907b5ecab!2sMarbella%2C%20M%C3%A1laga!5e0!3m2!1sen!2ses!4v1659442306006!5m2!1sen!2ses" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </div>
-</div>
-</section>
-
-<!-- CLIENTES -->
-<section class="clientes">
-<div class="clientes-text">
-    <h1>¿Qué dicen nuestros clientes?</h1>
-</div>
-<div class="opinions">
-    <div class="opinion-item">
-        <img src="./img/img/user1.jpg">
-        <div class="opinion-item-text">
-            <p>Todo lo que sale de esa cocina está de gloria bendita! Como curiosidad era uno de los locales preferidos de Xavier Cugat.</p>
-            <h2>Cristinie Berkley</h2>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star-half-o"></i>
-        </div>
-    </div>
-    <div class="opinion-item">
-        <img src="./img/img/user2.jpg">
-        <div class="opinion-item-text">
-            <p>No hay mayor recompensa un domingo que descubrir Garlana a domicilio. La paella Parellada excepcional! Felicidades por la iniciativa digital.</p>
-            <h2>David Byer</h2>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star-o"></i>
-        </div>
-    </div>
-</div>
-<div class="recs">
-<a href="http://www.tripadvisor.es/Restaurant_Review-g187497-d4795077-Reviews-Garlana-Barcelona_Catalonia.html" target="_blank" class="special-rec"><img src="./img/tenedor.png"></a>
-<a href="http://www.tripadvisor.es/Restaurant_Review-g187497-d4795077-Reviews-Garlana-Barcelona_Catalonia.html" target="_blank"><img src="./img/tripad.png"></a>
-<a href="#" target="_blank"><img src="./img/yelp.svg"></a>
 </div>
 </section>
 
 <!-- ABOUT US -->
 <section class="about">
     <div class="logos">
-        <a href="https://www.instagram.com/garlana_/?hl=en" target="_blank"><i class="fa fa-instagram"></i></a>
-        <a href="https://www.facebook.com/Garlana?ref=hl" target="_blank"><i class="fa fa-facebook"></i></a>
+        <a href="https://www.instagram.com/paellamarbella/?hl=en" target="_blank"><i class="fa fa-instagram"></i></a>
+        <a href="https://www.facebook.com/PaellaMarbellaCatering" target="_blank"><i class="fa fa-facebook"></i></a>
         <a href="#" target="_blank"><i class="fa fa-twitter"></i></a>
         <a href="#" target="_blank"><i class="fa fa-google"></i></a>
     </div>
